<resources>
    <string name="app_name">PTM Security</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_you_want_to_exit_app">Are you sure you want to exit app?</string>
    <string name="it_seems_you_are_using_rooted_phone"><![CDATA[It seems you are using Rooted Phone.<br>We aren\'t supporting]]></string>
    <string name="rooted_device_detected"><![CDATA[Rooted Device Detected!<br><br>For security reasons, we cannot allow login in rooted devices. Please contact Admin.]]></string>
    <string name="welcome_to_ptm_security">Welcome to PTM Security</string>
    <string name="no_internet">Please check your internet.</string>
    <string name="loading">Loading...</string>
    <string name="ptm_helps_you_login_securely"><![CDATA[PTM helps you login securely.\nYou\'ll use this app to approve your logins after entering username & password on your computer.]]></string>
    <string name="new_to_ptm">New to PTM Security?</string>
    <string name="get_started">Get Started</string>
    <string name="used_ptm_before">Used PTM Before?</string>
    <string name="get_my_account_back">Get My Account Back</string>
    <string name="ptm_security_enabled_account">PTM Security Enabled Account</string>
    <string name="add_a_ptm_security_account">Add a PTM Security Account</string>
    <string name="login">Login</string>
    <string name="login_description_1">You may have received an Activation Code during the Enrollment process. You may request new one from your Administrator.</string>
    <string name="login_description_2">You can also Add an Account by visiting the Activation Link generated by PTM\'s Setup Process or by your Administrator.</string>
    <string name="activation_id">Activation ID</string>
    <string name="please_enter_a_valid_activation_id">Please enter a valid Activation ID</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="new_login_detected">New Login Detected</string>
    <string name="decision_description">We received a new login request.\nPlease check below details and Approve it,\nif you think it was you who made the request.</string>
    <string name="browser">Browser</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="about_info">About Info</string>
    <string name="name">Name</string>
    <string name="designation">Designation</string>
    <string name="customer_contact">Customer Contact</string>
    <string name="reminder_date">Reminder Date</string>
    <string name="prj_description">Project Description </string>
    <string name="ip_address">IP Address</string>
    <string name="category">Category</string>
    <string name="prj_lead">Project Lead</string>
    <string name="prj_status">Project Status</string>
    <string name="reqst_date">Requested Date</string>
    <string name="request_time">Request Time</string>
    <string name="image">Image</string>
    <string name="status_date">Date Status</string>
    <string name="cat_description">Category Description</string>
    <string name="go_to_app">Go To App</string>
    <string name="why_we_need_to_keep_this_notifcation_active">Why we need to keep\nthis Notification Active?</string>
    <string name="username">UserName</string>
    <string name="emp_id">Employee ID</string>
    <string name="default_notification_channel_id">1001</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="projects">Projects</string>
    <string name="prj_location">Project Location</string>
    <string name="company">Companies</string>
    <string name="company_name">Company</string>
    <string name="files">Files</string>
<string name="short_name">Short Name</string>
    <string name="equipment">Equipment</string>
    <string name="address_book">AddressBook</string>
    <string name="email">Email</string>
    <string name="status">Status</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="reg_date">Registered Date</string>
<string name="country">Country</string>
    <string name="price">Price</string>
    <string name="field_activity">Field Activity</string>
<string name="description">Description</string>
    <string name="reference">Reference</string>
    <string name="homepage">Home Page</string>
    <string name="contact">Contact</string>
    <string name="search">Search</string>

</resources>