<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onParent"
    android:orientation="vertical"
    tools:context=".activities.Login">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:onClick="onParent"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:onClick="onParent"
        android:text="@string/login_description_1"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:onClick="onParent"
        android:text="@string/login_description_2"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="onParent"
            android:text="@string/activation_id"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@+id/b1"
            android:layout_toEndOf="@+id/tv1"
            android:maxLength="8"
            android:inputType="number"
            android:textColor="@color/colorBlack" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/roundrect_nopad"
            android:onClick="onLogin"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>