<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Decision">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/new_login_detected"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/decision_description"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_margin="25dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:background="@drawable/table_border"
                android:padding="5dp"
                android:text="@string/browser"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBrowser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:background="@drawable/table_border"
                android:padding="5dp"
                android:textColor="@color/colorBlack" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:background="@drawable/table_border"
                android:padding="5dp"
                android:text="@string/ip_address"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIpAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:background="@drawable/table_border"
                android:padding="5dp"
                android:textColor="@color/colorBlack" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_weight="1"
                android:background="@drawable/table_border"
                android:padding="5dp"
                android:text="@string/request_time"
                android:textColor="@color/colorBlack" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTimeStamp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_weight="1"
                android:background="@drawable/table_border"
                android:padding="5dp"
                android:textColor="@color/colorBlack" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:elevation="6dp"
            android:onClick="onApprove"
            app:cardBackgroundColor="@color/colorGreen"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onApprove"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:onClick="onApprove"
                    android:padding="15dp"
                    android:text="@string/approve"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:elevation="6dp"
            android:onClick="onDeny"
            app:cardBackgroundColor="@color/colorRed"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onDeny"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:onClick="onDeny"
                    android:padding="15dp"
                    android:text="@string/deny"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>